# esp_ai_os

./: AGENTS.md  README.md  README_CN.md  esp-claw_origin.code-workspace
.agents/: design.md
.agents/spec/: claw-skill-spec.md
.gitlab/ci/: build.yml  check_copyright_config.yaml  rules.yml
application/: .build-rules.yml
application/edge_agent/: CMakeLists.txt  partitions_16MB.csv  partitions_32MB.csv  partitions_8MB.csv  sdkconfig.defaults
application/edge_agent/docs/: CLI_README.md  lib_gps.md
application/edge_agent/main/: app_fs.c  idf_component.yml  main.c
application/mcp_server_point/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
application/mcp_server_point/main/: idf_component.yml  main.c
apps/: bubble_level.lua  compass.lua  dashboard.lua  dice.lua  flappy.lua  g2048.lua  paint.lua  particles.lua  sensor_hub.lua  simon.lua  snake.lua  starfield.lua  tilt_maze.lua
components/claw_capabilities/cap_cli/: CMakeLists.txt
components/claw_capabilities/cap_im_platform/: CMakeLists.txt
components/claw_capabilities/cap_mcp_client/: CMakeLists.txt
components/claw_capabilities/cap_mcp_server/: CMakeLists.txt  idf_component.yml
components/claw_capabilities/cap_session_mgr/: CMakeLists.txt
components/claw_capabilities/cap_system/: CMakeLists.txt
components/claw_modules/claw_core/: CMakeLists.txt  idf_component.yml
components/claw_modules/claw_event_router/: CMakeLists.txt
components/common/app_claw/: Kconfig  app_capabilities.c  app_claw.c  app_lua_modules.c  idf_component.yml
components/common/boot_launcher/: CMakeLists.txt  boot_launcher.c
components/common/display_arbiter/: display_arbiter.c
components/common/display_session/: CMakeLists.txt  display_session.c  idf_component.yml
components/common/emote/: CMakeLists.txt  emote.c  idf_component.yml
components/common/mcp_mdns/: CMakeLists.txt  (+1 more)
components/slave_ota/: CMakeLists.txt  Kconfig  slave_ota.c
components/slave_ota/include/: slave_ota.h
components/usb_msc/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  tusb_config.h  usb_msc.c  usb_msc_descriptors.c  usb_msc_descriptors.h
components/usb_msc/include/: usb_msc.h
develop_docs/: CAPABILITIES.md  DISPLAY_APP_EXIT_RECOVERY.md  DISPLAY_OPTIMIZATION_NOTES.md  ESP32C5_SMART_HOME_RESEARCH.md  Metalio Claw4.md  launcher_development_plan.md
docs/: pnpm-lock.yaml
tools/esp-claw-cli/: esp-claw-cli.py
(+176 files in other folders)
